--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -1,14 +1,14 @@
 <style>
   div.cell{
       border: 1px solid #dcdcdc;
-      height: 45vh;
-      width: 48vw;
+      height: 43vh;
+      width: 47.5vw;
       margin: 5px;
       border-radius: 5px;
   }
 </style>
-<div class="table">
-  <div class="row">
+<div class="table" style="width: 100%;">
+  <div class="row" style="width: 100%;">
     <div class="cell" style="float: left;">
         <div class="heading">Map of Impacted Area</div>
     </div>
