--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
     });
 </script>
 <div>
-  <table border="1" id="events">
+  <table id="events" style="width: 98%; margin-left: auto;margin-right: auto;margin-top: 5px;">
 
     <thead>
     <tr>
