--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,3 +60,71 @@ div.main_content{
     width: 100%;
     margin-top: 7vh;
 }
+
+.longbutton{
+  padding: 10px 70px;
+}
+
+.form-group{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.footer-page{
+  height: 60px;
+  padding-top: 20px;
+}
+
+.subtitle{
+    font-size: 30px;
+    color: blue;
+    padding-top: 10px;
+    margin-top: 60px;
+}
+
+.hrfooter {
+    margin: 0px;
+}
+
+.right-menu{
+    font-size: 12px;
+    margin-top: 40px;
+}
+
+.sabay-header{
+    background-color: #ffbe69;
+  background-image: none;
+  border: 1px solid #d4d4d4;
+  border-radius: 0px;
+  min-height: 60px;
+}
+
+.row {
+    margin: 40px 0px 40px 0px;
+}
+
+img.dashboard{
+  margin: 10px 10px 10px 10px;
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transform: scale(1, 1);
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s; /* Safari */
+}
+
+img.dashboard:hover{
+    cursor: pointer;
+    -webkit-transform: scale(2, 2);
+  -ms-transform: scale(2, 2);
+  transform: scale(2, 2);
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s; /* Safari */
+  box-shadow: 10px 10px 5px #888888;
+  z-index: 1;
+}
+
+footer {
+    height: 100%;
+    background-color: GREY;
+    color: WHITE;
+}
