--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="margin-left: 0px;">
-<div class="header">&nbsp;</div>
+<div class="header"><h1>&nbsp;&nbsp;CONTACT TRACING  <h1>&nbsp;</div>
+<div class="menu">&nbsp;&nbsp; Home | Events | Help</div>
+
 <div class="main_content">
     <%= yield %>
 </div>
