--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>Animal Contract Tracing</title>
+	  <title>Animal Field Investigation Support System</title>
 	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= stylesheet_link_tag    "datepicker", media: "all", "data-turbolinks-track" => true %>
@@ -41,7 +41,7 @@
     <%= yield %>
     <hr class="hrfooter" />
     <footer class="footer-page">
-      <center>&copy; SabayTrade / ALL RIGHTS RESERVED 2015</center>
+      <center>&copy; Animal Field Investigation Support System</center>
     </footer>
 	</body>
 </html>
