added history to event index and summary to event dashboard

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,3 +142,13 @@ footer {
     color: WHITE;
 }
 
+div.odd-row{
+    font-size: 120%;
+    padding-left: 10px;
+}
+
+div.even-row{
+    font-size: 120%;
+    background-color: #dcdcdc;
+    padding-left: 10px;
+}
