--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,9 +12,9 @@
     <tr>
       <th>Location</th>
       <th>Date Reported</th>
-      <th width="250">Signs Affected</th>
-      <th style="text-align: center;">Number Affected</th>
-      <th style="text-align: center;">Number Dead</th>
+      <th width="250">Signs and Symptoms</th>
+      <th style="text-align: center;">Number of Animals Affected </th>
+      <th style="text-align: center;">Number of Animals Dead</th>
       <th>Status</th>
       <th>Action</th>
     </tr>
