--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,10 +10,8 @@
 <div class="table" style="width: 100%;">
   <div class="row" style="width: 100%;">
     <div class="cell" style="float: left;">
-        <div class="heading">Map of Impacted Area</div>
-        <div class="span8">
-          <iframe width="100%" height="225" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=15+Springfield+Way,+Hythe,+CT21+5SH&aq=t&sll=52.8382,-2.327815&sspn=8.047465,14.666992&ie=UTF8&hq=&t=m&z=14&ll=51.077429,1.121722&output=embed"></iframe>
-      </div>
+      <div class="heading">Map of Impacted Area</div>
+      <iframe width="100%" height="225" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&aq=t&sll=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&sspn=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&ie=UTF8&hq=&hnear=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&t=m&z=10&ll=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&output=embed"></iframe>
     </div>
     <div class="cell" style="float: right;">
       <div class="heading">Summary of Impacted Area</div>
