--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,9 +17,11 @@
   <div class="row" style="width: 100%;">
     <div class="cell" style="float: left;">
         <div class="heading">Map of Potentially Impacted Areas</div>
+        <% if @site.size > 0 %>
         <div class="span8">
           <iframe width="100%" height="225" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&aq=t&sll=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&sspn=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&ie=UTF8&hq=&hnear=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&t=m&z=10&ll=<%= @site[0]["lat"] %>,<%= @site[0]["long"] %>&output=embed"></iframe>
-      </div>
+        </div>
+        <% end %>
     </div>
     <div class="cell" style="float: right;">
       <div class="heading">Summary of Potentially Impacted Areas</div>
