--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,7 @@
 <div class="table" style="width: 98%;margin-top: -20px;margin-left: auto;margin-right: auto;">
   <div class="row">
     <div style="width: 99%;">
-      Case Reported at <%= @site.first["name"] %> on <%= @event.date_reported.strftime("%d %b %Y") %> (<b>Symptoms: </b>
+      Case Reported at <b><%= @site.first["name"] %></b> on <%= @event.date_reported.strftime("%d %b %Y") %> (<b>Symptoms: </b>
       <%= to_symptom_name(@event.report.animal_symptoms) %>, <b>Number of Affected : </b>
       <%= (@event.report.blank? ? 0 : @event.report.number_of_infected) %>)
     </div>
@@ -46,13 +46,47 @@
     </div>
     <div class="cell" style="float: right;">
       <div class="heading">Event History</div>
-      <div class="summary" style="height: 10vh;">
+      <div class="summary" style="height: 15vh;">
         <% (@event.event_statuses || []).each do |status| %>
             <div class="<%= cycle('odd-row', 'even-row') %>">
               <%= status.to_s %>
             </div>
         <% end %>
       </div>
+      <div>
+        <%= form_tag("/event_statuses", method: "post") do %>
+        <%= select_tag( :status ,options_for_select([['Investigating', 'Investigating'], ['Resolved', 'Resolved']])) %>
+        <%= hidden_field_tag :event_id , @event.id %>
+        <%= submit_tag("Update") %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  <!--
+  function confirmChange(id)
+  {
+      var new_state = document.getElementById(id).value
+    if(confirm("Do you want to update the state to " + new_state+ "?"))
+    {
+        var form = document.createElement("form");
+        form.method = 'POST';
+        form.name = 'event_status';
+        form.action = '/event_statuses';
+
+        var event = document.createElement("input")
+        event.value = <%= @event.id %>;
+        event.name = "event_id";
+
+        var status = document.createElement("input")
+        event.value = new_state
+        event.name = "status";
+
+        document.body.appendChild(form);
+        form.submit();
+    }
+  }
+  //-->
+</script>
