--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,10 @@
       </div>
     <!--/.navbar-inner -->
     </div>
+    <div style="height:80vh; width: 100%; overflow: auto;margin-top: 0px;">
+      <%= yield %>
+    </div>
 
-    <%= yield %>
     <hr class="hrfooter" />
     <footer class="footer-page">
       <center>&copy; Animal Field Investigation Support System</center>
