--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
       <td><%= event.source_contact_name %></td>
       <td>Animal show signs of <%= to_symptom_name(event.report.animal_symptoms) %></td>
       <td style="text-align: center;"><%= event.report.number_of_infected %></td>
-      <td style="text-align: center;"><%= event.report.number_of_infected %></td>
+      <td style="text-align: center;"><%= event.report.number_of_death %></td>
       <td><%= event.event_statuses.last.status %></td>
       <td><%= link_to "View",event_path(event) %></td>
      </tr>
